--- a/src/main/webapp/resources/sample/index.html
+++ b/src/main/webapp/resources/sample/index.html
@@ -3,9 +3,13 @@
 <head><!--  문서내용과는 관계없는 문서정보가 들어있고, 메타데이터(데이터의데이터)가 존재 -->
 <meta charset="UTF-8"><!-- 문서의 언어 인코딩설정 지금은 유니코드로 됨 -->
 <title>반응형홈페이지</title><!-- 문서의 제목을 브라우저상단왼쪽에 표시 -->
+<!-- span 자리를 차지하지 않는 영역 =한 뼘, px 픽셀 화면에 표시되는 크기의 단위 -->
+<!-- :콜론(속성:값, Key:value), ;세미콜론(문장의 끝) -->
 <style>
 /*모바일용 스타일지정 시작  */
-
+span{
+display:inline-block;height:10px;width:50px;background-color:red;
+}
 /* 모바일용 스타일 지정 끝*/
 </style>
 <script>
@@ -18,7 +22,11 @@
 <div id="wrap"><!-- 랩핑시킨 영역 -->
 <header>
 <!-- 상단 로고와 햄버거 메뉴영역 시작 -->
-LOGO
+<h1>LOGO</h1><!-- 헤드라인 글자를 표시h1~h6 -->
+
+<span></span>
+<span></span>
+<span></span>
 햄버거메뉴이미지
 HOME
 WE ARE
@@ -29,12 +37,12 @@ CONTACT US
 </header>
 <section><!-- division디비전이라는 div 영역표시 태그 대신에 사용-->
 <!-- 본문슬라이드 영역 시작 -->
-
+슬라이드이미지1
 <!-- 본문슬라이드 영역 끝 -->
 </section>
 <footer>
 <!-- 하단 로고 영역 시작 -->
-
+LOGO
 <!-- 하단 로고 영역 끝 -->
 </footer>
 </div>
