20201120 8교시 립숨데이터

--- a/src/main/webapp/resources/sample/work.html
+++ b/src/main/webapp/resources/sample/work.html
@@ -12,12 +12,15 @@
 <!-- span태그 자리를 차지하지 않는 영역 = 한뼘 , px 픽셀 화면에 표시되는 크기의 단위 -->
 <!-- :콜론(속성:값, Key:Value), ;세미콜론(문장의 끝) -->
 <style>
+/* work영역 시작*/
 
+/* work영역 끝*/
 </style>
 <script>
-/* 자바스크립트 시작 */
-
-/* 자바스크립트 끝 */
+/*자바스크립트 시작*/
+ * 
+ */
+/*자바스크립트 끝*/
 </script>
 </head>
 <body><!-- 문서내용이 들어가는 영역 -->
@@ -46,14 +49,15 @@
 <!-- 상단 로고와 햄버거 메뉴영역 끝 -->
 </header>
 <section><!-- division디비전이라는 div 영역표시 태그 대신에 사용 -->
-<!-- 본문 슬라이드 영역 시작 -->
-<!-- 이미지를 불러오는 태그 img -->
-<!-- 경로:상대(./img/...),절대경로(/resources/sample/img/...) -->
-<!-- 태그안쪽에 지정한 스타일을 인라인스타일 -->
-<div class="slider">
-	<img src="/resources/sample/img/HBD.jpg" alt="크리스마스 이미지입니다.">
-</div>
-<!-- 본문 슬라이드 영역 끝 -->
+WORK 
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지1">
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지2">
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지3">
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지4">
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지5">
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지6">
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지7">
+<img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지8">
 </section>
 <footer class="footer">
 <!-- 하단 로고 영역 시작 -->
