--- a/src/main/webapp/resources/sample/work.html
+++ b/src/main/webapp/resources/sample/work.html
@@ -48,16 +48,50 @@
 </nav>
 <!-- 상단 로고와 햄버거 메뉴영역 끝 -->
 </header>
-<section><!-- division디비전이라는 div 영역표시 태그 대신에 사용 -->
-WORK 
+<section class="work-section"><!-- division디비전이라는 div 영역표시 태그 대신에 사용 -->
+<h1 class="section-title">WORK</h1>
+<ul>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지1">
+</a>
+</li>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지2">
+</a>
+</li>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지3">
+</a>
+</li>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지4">
+</a>
+</li>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지5">
+</a>
+</li>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지6">
+</a>
+</li>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지7">
+</a>
+</li>
+<li>
+<a href="javascript:;" title="갤러리게시판2의 이미지1번입니다.">
 <img src="/resources/sample/img/rose.jpg" alt="갤러리게시판2이미지8">
+</a>
+</li>
+</ul>
 </section>
 <footer class="footer">
 <!-- 하단 로고 영역 시작 -->
