--- a/src/main/webapp/resources/sample/contact.html
+++ b/src/main/webapp/resources/sample/contact.html
@@ -12,21 +12,7 @@
 <!-- span태그 자리를 차지하지 않는 영역 = 한뼘 , px 픽셀 화면에 표시되는 크기의 단위 -->
 <!-- :콜론(속성:값, Key:Value), ;세미콜론(문장의 끝) -->
 <style>
-/* CONTACT 영역 시작*/
-.contact-section {
-margin-top:30px;
-}
-.contact-section h1 {
-text-align:center;
-font-size:42px;
-color:#3f51b5;
-font-weight:normal;
-}
-.contact-section form {
-margin-top:30px;
 
-}
-/* CONTACT 영역 끝 */
 </style>
 <script>
 /*자바스크립트 시작*/
@@ -79,7 +65,9 @@ margin-top:30px;
 <label for="message">메세지</label>
 <textarea name="message" id="message" placeholder="내용을 입력해주세요."></textarea>
 </fieldset>
+<div class="submit-btn">
 <button type="submit">메세지보내기</button>
+</div>
 </form>
 <!-- form 태그의 목적은 input,textarea,checkbox,radio,select데이터를
 submit(전송)하는 것이 목적. -->
