--- a/src/main/webapp/resources/sample/index.html
+++ b/src/main/webapp/resources/sample/index.html
@@ -16,23 +16,21 @@
 <link rel="stylesheet" href="/resources/sample/css/reset.css" type="text/css">
 <link rel="stylesheet" href="/resources/sample/css/mobile.css" type="text/css">
 <link rel="stylesheet" href="/resources/sample/css/tablet.css" type="text/css">
+<link rel="stylesheet" href="/resources/sample/css/pc.css" type="text/css">
 <!-- span태그 자리를 차지하지 않는 영역 = 한뼘 , px 픽셀 화면에 표시되는 크기의 단위 -->
 <!-- :콜론(속성:값, Key:Value), ;세미콜론(문장의 끝) -->
 <style>
 /*여기까지는 모바일용-아래부터는 반응형(태블릿용, PC용) @미디어쿼리사용-메타태그viewport값 필수*/
-/*반응형-태블릿용 스타일 시작*/
+
+/*PC용 스타일시작*/
 /*미디어쿼리:미디어의 가로크기나 768px 이상이면
 아래 스타일 적용*/
-@media all and (min-width:768px) {
-/*헤더영역 시작*/
+@media all and (min-width:1132px) {
 
-/*헤더영역 끝*/
-/*슬라이드영역 시작*/
-.carousel-item, .carousel-item img {height:500px;}
-/*슬라이드영역끝 */
+
 }
+/*PC용 스타일끝*/
 
-/*반응형-태블릿용 스타일 시작*/
 </style>
 <script>
 /* 자바스크립트 시작 */
@@ -60,7 +58,7 @@ $(document).ready(function(){
 <span></span>
 </div>
 <!-- html5 시만텍 웹 = 의미가 있는 태그를 사용하게 해서 AI가 인식하게 됩니다. nav태그 -->
-<nav class="gnb"><!-- gnb:글로벌네이게이션:전체영역메뉴  Global Navigagion -->
+<nav class="gnb"><!-- gnb:글로벌네이게이션:전체영역메뉴  Global Navigation -->
 <!-- 리스트를 모여주는 태그 ul(UnOrdered List *.~, *.~ ) , ol(Ordered List 1.~, 2.~ ) -->
 <ul>
 <li><a href="index.html">HOME</a></li>
