--- a/src/main/webapp/resources/home.html
+++ b/src/main/webapp/resources/home.html
@@ -101,15 +101,15 @@
 
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
+    <!-- 관리자 상단로고 Brand Logo -->
     <a href="/admin" class="brand-link">
       <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Spring 관리자</span>
     </a>
 
-    <!-- Sidebar -->
+    <!-- 왼쪽 메뉴Sidebar -->
     <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
+      <!-- 로그인한 사용자표시 Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
           <img src="dist/img/user3-128x128.jpg" class="img-circle elevation-2" alt="User Image">
@@ -119,7 +119,7 @@
         </div>
       </div>
 
-      <!-- SidebarSearch Form -->
+      <!-- 검색폼 SidebarSearch Form -->
       <div class="form-inline">
         <div class="input-group" data-widget="sidebar-search">
           <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
@@ -131,7 +131,7 @@
         </div>
       </div>
 
-      <!-- Sidebar Menu -->
+      <!-- 사용자 홈과 대시보드 메뉴Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           
@@ -160,13 +160,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link">
+                <a href="./member_list.html" class="nav-link"><!-- 메뉴 선택 시 활성화active 되는 것은 jquery로 만들예정 -->
                   <i class="far fa-circle nav-icon"></i>
                   <p>관리자 관리</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
+                <a href="./board_list.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>게시물관리</p>
                 </a>
