jquery http->https changed

--- a/src/main/webapp/resources/chart/start.html
+++ b/src/main/webapp/resources/chart/start.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>오픈챠트 시작</title>
-<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script  src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.1.0/dist/chart.min.js"></script>
 </head>
 <body>
